Fix minor layout issue in history page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,7 +201,7 @@ hr {
 }
 
 #pagination {
-  width: 215px;
+  width: 210px;
 }
 
 .jPag-control-front, .jPag-control-back {
